@@ -109,6 +109,7 @@ production.
   however delete the redirect page.
 * (bug 22683) {{msgnw:}} and other uses of PPFrame::RECOVER_ORIG will correctly
   recover the original code of extension tags.
+* (bug 67021) Corrected validation of ISBNs containing X.
 
 === Web API changes in 1.24 ===
 * action=parse API now supports prop=modules, which provides the list of
